--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 70%;
+  margin: 1rem 1rem;
   padding: 5vw 5vw;
   border: 1px solid;
   border-radius: 10px;
@@ -74,8 +74,8 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 0.5rem;
   gap: 1rem;
-  margin-top: 3rem;
   padding: 0.2rem;
 }
 
@@ -118,26 +118,25 @@ body {
 }
 
 @media (min-width: 320px) {
-  body {
-    font-size: x-small;
-  }
-
   .gameText {
+    font-size: 1.3rem;
     padding-top: 0.5rem;
   }
 
   #gameContainer {
+    margin: 1.5rem 1.5rem;
     padding: 0.5rem 0.5rem;
-    height: 90%;
+    height: 70%;
   }
 
   .btnContainer {
+    width: 70%;
     margin-top: 0.5rem;
     padding: 0.1rem;
   }
 
   .btnContainer > .choiceBtn {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   .btnContainer > .restartBtn {
     font-size: 1rem;
@@ -149,8 +148,10 @@ body {
     font-size: small;
   }
   #gameContainer {
+    margin: 2rem 2rem;
     padding: 1rem 1rem;
-    height: 95%;
+    height: 80%;
+    width: 70%;
   }
 
   .btnContainer {
@@ -167,15 +168,18 @@ body {
 }
 
 @media (min-width: 768px) {
-  body {
-    font-size: medium;
+  .gameText {
+    font-size: 1.5rem;
+    padding-top: 0.5rem;
   }
   #gameContainer {
     padding: 1.5rem 1.5rem;
     height: 90%;
+    width: 60%;
   }
 
   .btnContainer {
+    width: 60%;
     margin-top: 1rem;
     padding: 0.5rem;
   }
@@ -195,9 +199,11 @@ body {
   #gameContainer {
     padding: 1.5rem 1.5rem;
     height: 90%;
+    width: 60%;
   }
 
   .btnContainer {
+    width: 60%;
     margin-top: 1rem;
     padding: 0.5rem;
     gap: 2rem;
@@ -212,16 +218,18 @@ body {
 }
 
 @media (min-width: 1024px) {
-  body {
-    font-size: medium;
+  .gameText {
+    font-size: 1.6rem;
   }
+
   #gameContainer {
     padding: 1.5rem 1.5rem;
     height: 80%;
-    width: 60%;
+    width: 50%;
   }
 
   .btnContainer {
+    width: 60%;
     margin-top: 1rem;
     padding: 0.5rem;
     gap: 1rem;
@@ -236,8 +244,8 @@ body {
 }
 
 @media (min-width: 1200px) {
-  body {
-    font-size: medium;
+  .gameText {
+    font-size: 1.8rem;
   }
   #gameContainer {
     padding: 1.5rem 1.5rem;
@@ -260,24 +268,25 @@ body {
 }
 
 @media (min-width: 1590px) {
-  body {
-    font-size: medium;
+  .gameText {
+    font-size: 2rem;
   }
+
   #gameContainer {
     padding: 1.5rem 1.5rem;
-    width: 50%;
+    width: 40%;
     height: 80%;
   }
 
   .btnContainer {
     margin-top: 1rem;
     padding: 0.2rem;
-    width: 70%;
+    width: 60%;
     gap: 1rem;
   }
 
   .btnContainer > .choiceBtn {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .btnContainer > .restartBtn {
     font-size: 1.5rem;
@@ -314,5 +323,15 @@ body {
   }
   .btnContainer > .restartBtn {
     font-size: 2rem;
+  }
+}
+
+@media (min-width: 2100px) {
+  #gameContainer {
+    width: 40%;
+  }
+
+  .btnContainer {
+    width: 90%;
   }
 }
